fix: make playbutton smaller to enable click on tracks

--- a/src/components/PlayButton.module.css
+++ b/src/components/PlayButton.module.css
@@ -5,4 +5,5 @@
   background: transparent;
   padding: 0;
   margin: 0;
+  border-radius: 2em;
 }
